--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
         <div class="glyph fs1">
           <div class="clearfix pbs iconred">
             <svg class="icon icon-twitter-with-circle">
-              <use xlink:href="symbol-defs.svg#icon-twitter-with-circle"></use>
+              <use xlink:href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
             </svg>
           </div>
         </div>
