--- a/index.html
+++ b/index.html
@@ -185,28 +185,28 @@
                 <div class="glyph fs2">
                   <div class="clearfix pbs">
                     <svg class="icon icon-facebook-with-circle">
-                      <use xlink:href="#icon-facebook-with-circle"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="glyph fs1">
                   <div class="clearfix pbs">
                     <svg class="icon icon-twitter-with-circle">
-                      <use xlink:href="#icon-twitter-with-circle"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="glyph fs1">
                   <div class="clearfix pbs">
                     <svg class="icon icon-dribbble-with-circle">
-                      <use xlink:href="#icon-dribbble-with-circle"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="glyph fs2">
                   <div class="clearfix pbs">
                     <svg class="icon icon-behance2 be">
-                      <use xlink:href="#icon-behance2"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-behance2"></use>
                     </svg>
                   </div>
                 </div>
@@ -222,28 +222,28 @@
                 <div class="glyph fs2">
                   <div class="clearfix pbs">
                     <svg class="icon icon-facebook-with-circle">
-                      <use xlink:href="#icon-facebook-with-circle"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="glyph fs1">
                   <div class="clearfix pbs">
                     <svg class="icon icon-twitter-with-circle">
-                      <use xlink:href="#icon-twitter-with-circle"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="glyph fs1">
                   <div class="clearfix pbs">
                     <svg class="icon icon-dribbble-with-circle">
-                      <use xlink:href="#icon-dribbble-with-circle"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="glyph fs2">
                   <div class="clearfix pbs">
                     <svg class="icon icon-behance2 be">
-                      <use xlink:href="#icon-behance2"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-behance2"></use>
                     </svg>
                   </div>
                 </div>
@@ -259,28 +259,28 @@
                 <div class="glyph fs2">
                   <div class="clearfix pbs">
                     <svg class="icon icon-facebook-with-circle">
-                      <use xlink:href="#icon-facebook-with-circle"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="glyph fs1">
                   <div class="clearfix pbs">
                     <svg class="icon icon-twitter-with-circle">
-                      <use xlink:href="#icon-twitter-with-circle"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="glyph fs1">
                   <div class="clearfix pbs">
                     <svg class="icon icon-dribbble-with-circle">
-                      <use xlink:href="#icon-dribbble-with-circle"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="glyph fs2">
                   <div class="clearfix pbs">
                     <svg class="icon icon-behance2 be">
-                      <use xlink:href="#icon-behance2"></use>
+                      <use xlink:href="resources/icomoon/symbol-defs.svg#icon-behance2"></use>
                     </svg>
                   </div>
                 </div>
@@ -624,7 +624,7 @@
         <div class="glyph fs2">
           <div class="clearfix pbs iconred">
             <svg class="icon icon-facebook-with-circle">
-              <use xlink:href="#icon-facebook-with-circle"></use>
+              <use xlink:href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
             </svg>
           </div>
         </div>
@@ -638,28 +638,28 @@
         <div class="glyph fs1">
           <div class="clearfix pbs iconred">
             <svg class="icon icon-dribbble-with-circle">
-              <use xlink:href="#icon-dribbble-with-circle"></use>
+              <use xlink:href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
             </svg>
           </div>
         </div>
         <div class="glyph fs2">
           <div class="clearfix pbs iconred">
             <svg class="icon icon-behance2 be">
-              <use xlink:href="#icon-behance2"></use>
+              <use xlink:href="resources/icomoon/symbol-defs.svg#icon-behance2"></use>
             </svg>
           </div>
         </div>
         <div class="glyph fs2">
           <div class="clearfix pbs iconred">
             <svg class="icon icon-github">
-              <use xlink:href="#icon-github"></use>
+              <use xlink:href="resources/icomoon/symbol-defs.svg#icon-github"></use>
             </svg>
           </div>
         </div>
         <div class="glyph fs2">
           <div class="clearfix pbs iconred">
             <svg class="icon icon-google-plus3">
-              <use xlink:href="#icon-google-plus3"></use>
+              <use xlink:href="resources/icomoon/symbol-defs.svg#icon-google-plus3"></use>
             </svg>
           </div>
         </div>
