--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
       <div class="glyph fs2">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-behance be">
-            <use xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
+            <use class="behance-use" xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
           </svg>
         </div>
       </div>
