--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-behance be">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
+                    <use class="behance-use" xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
                   </svg>
                 </div>
               </div>
@@ -251,7 +251,7 @@
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-behance be">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
+                    <use class="behance-use" xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
                   </svg>
                 </div>
               </div>
@@ -288,7 +288,7 @@
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-behance be">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
+                    <use class="behance-use" xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
                   </svg>
                 </div>
               </div>
