finish corrections except libraries

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         morbi lobortis laoreet.
       </p>
       <div class="questions">
-        <div class="question">
+        <div class="question" onclick="openQuestion(this)">
           <div class="question-con-title">
             <span class="container-icon">
               <span aria-hidden="true" class="icon-laptop"></span>
@@ -466,7 +466,7 @@
             </p>
           </div>
         </div>
-        <div class="question">
+        <div class="question" onclick="openQuestion(this)">
           <div class="question-con-title">
             <span class="container-icon">
               <span aria-hidden="true" class="icon-cloud"></span>
@@ -485,7 +485,7 @@
             </p>
           </div>
         </div>
-        <div class="question">
+        <div class="question" onclick="openQuestion(this)">
           <div class="question-con-title">
             <span class="container-icon">
               <span aria-hidden="true" class="icon-focus"></span>
