--- a/index.html
+++ b/index.html
@@ -193,28 +193,28 @@
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-facebook-with-circle">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-twitter-with-circle">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-dribbble-with-circle">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-behance be">
-                    <use class="behance-use" xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
+                    <use class="behance-use" href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
                   </svg>
                 </div>
               </div>
@@ -230,28 +230,28 @@
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-facebook-with-circle">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-twitter-with-circle">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-dribbble-with-circle">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-behance be">
-                    <use class="behance-use" xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
+                    <use class="behance-use" href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
                   </svg>
                 </div>
               </div>
@@ -267,28 +267,28 @@
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-facebook-with-circle">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-twitter-with-circle">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-dribbble-with-circle">
-                    <use xlink:href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-behance be">
-                    <use class="behance-use" xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
+                    <use class="behance-use" href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
                   </svg>
                 </div>
               </div>
@@ -312,7 +312,7 @@
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use xlink:href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -328,7 +328,7 @@
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use xlink:href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -344,7 +344,7 @@
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use xlink:href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -360,7 +360,7 @@
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use xlink:href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -376,7 +376,7 @@
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use xlink:href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -392,7 +392,7 @@
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use xlink:href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -639,42 +639,42 @@
       <div class="glyph fs2">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-facebook-with-circle">
-            <use xlink:href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
+            <use href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
           </svg>
         </div>
       </div>
       <div class="glyph fs1">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-twitter-with-circle">
-            <use xlink:href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
+            <use href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
           </svg>
         </div>
       </div>
       <div class="glyph fs1">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-dribbble-with-circle">
-            <use xlink:href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
+            <use href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
           </svg>
         </div>
       </div>
       <div class="glyph fs2">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-behance be">
-            <use class="behance-use" xlink:href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
+            <use class="behance-use" href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
           </svg>
         </div>
       </div>
       <div class="glyph fs2">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-github">
-            <use class="icon-use-github" xlink:href="resources/icomoon/symbol-defs.svg#icon-github"></use>
+            <use class="icon-use-github" href="resources/icomoon/symbol-defs.svg#icon-github"></use>
           </svg>
         </div>
       </div>
       <div class="glyph fs2">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-google-plus3">
-            <use xlink:href="resources/icomoon/symbol-defs.svg#icon-google-plus3"></use>
+            <use href="resources/icomoon/symbol-defs.svg#icon-google-plus3"></use>
           </svg>
         </div>
       </div>
