--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FE-Project</title>
-  <link rel="stylesheet" href="./resources/icomoon/style.css">
-  <link rel="stylesheet" href="./resources/et-line-font/style.css">
+  <link rel="stylesheet" href="resources/icomoon/style.css">
+  <link rel="stylesheet" href="resources/et-line-font/style.css">
   <link rel="stylesheet" href="main.css">
 </head>
 
@@ -123,8 +123,7 @@
           <div class="container-content">
             <h2 class="section-subtitle">Web Design</h2>
             <p class="section-text">
-              You can easily change icons by looking at <a class="link-ref"
-                href="./resources/et-line-font/index.html">ET
+              You can easily change icons by looking at <a class="link-ref" href="resources/et-line-font/index.html">ET
                 Line Icons</a>.
               quisque erat
               fermentum mi ridiculus euismod
@@ -189,33 +188,33 @@
       <container class="section-container-team">
         <div class="container-grid-element-team">
           <div class="team-image-container">
-            <img class="image" src="./resources/team_1.jpg" alt="Johnathan">
+            <img class="image" src="resources/team_1.jpg" alt="Johnathan">
             <div class="team-image-container social">
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-facebook-with-circle">
-                    <use href="./resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-twitter-with-circle">
-                    <use href="./resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-dribbble-with-circle">
-                    <use href="./resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-behance be">
-                    <use class="behance-use" href="./resources/icomoon/symbol-defs.svg#icon-behance"></use>
+                    <use class="behance-use" href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
                   </svg>
                 </div>
               </div>
@@ -226,33 +225,33 @@
         </div>
         <div class="container-grid-element-team">
           <div class="team-image-container">
-            <img class="image" src="./resources/team_2.jpg" alt="Jenny">
+            <img class="image" src="resources/team_2.jpg" alt="Jenny">
             <div class="team-image-container social">
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-facebook-with-circle">
-                    <use href="./resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-twitter-with-circle">
-                    <use href="./resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-dribbble-with-circle">
-                    <use href="./resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-behance be">
-                    <use class="behance-use" href="./resources/icomoon/symbol-defs.svg#icon-behance"></use>
+                    <use class="behance-use" href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
                   </svg>
                 </div>
               </div>
@@ -263,33 +262,33 @@
         </div>
         <div class="container-grid-element-team">
           <div class="team-image-container">
-            <img class="image" src="./resources/team_3.jpg" alt="James">
+            <img class="image" src="resources/team_3.jpg" alt="James">
             <div class="team-image-container social">
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-facebook-with-circle">
-                    <use href="./resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-twitter-with-circle">
-                    <use href="./resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs1">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-dribbble-with-circle">
-                    <use href="./resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
+                    <use href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
                   </svg>
                 </div>
               </div>
               <div class="glyph fs2">
                 <div class="clearfix pbs">
                   <svg class="icon-svg icon icon-behance be">
-                    <use class="behance-use" href="./resources/icomoon/symbol-defs.svg#icon-behance"></use>
+                    <use class="behance-use" href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
                   </svg>
                 </div>
               </div>
@@ -308,12 +307,12 @@
       </p>
       <container class="images-grid">
         <div class="container-grid-image-container">
-          <img class="image" src="./resources/portfolio-img1.jpg">
+          <img class="image" src="resources/portfolio-img1.jpg">
           <div class="link">
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use href="./resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -324,12 +323,12 @@
           </div>
         </div>
         <div class="container-grid-image-container">
-          <img class="image" src="./resources/portfolio-img2.jpg">
+          <img class="image" src="resources/portfolio-img2.jpg">
           <div class="link">
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use href="./resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -340,12 +339,12 @@
           </div>
         </div>
         <div class="container-grid-image-container">
-          <img class="image" src="./resources/portfolio-img3.jpg">
+          <img class="image" src="resources/portfolio-img3.jpg">
           <div class="link">
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use href="./resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -356,12 +355,12 @@
           </div>
         </div>
         <div class="container-grid-image-container">
-          <img class="image" src="./resources/portfolio-img4.jpg">
+          <img class="image" src="resources/portfolio-img4.jpg">
           <div class="link">
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use href="./resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -372,12 +371,12 @@
           </div>
         </div>
         <div class="container-grid-image-container">
-          <img class="image" src="./resources/portfolio-img5.jpg">
+          <img class="image" src="resources/portfolio-img5.jpg">
           <div class="link">
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use href="./resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -388,12 +387,12 @@
           </div>
         </div>
         <div class="container-grid-image-container">
-          <img class="image" src="./resources/portfolio-img6.jpg">
+          <img class="image" src="resources/portfolio-img6.jpg">
           <div class="link">
             <div class="glyph fs1 chain">
               <div class="clearfix pbs">
                 <svg class="icon-svg icon icon-chain">
-                  <use href="./resources/icomoon/symbol-defs.svg#icon-chain"></use>
+                  <use href="resources/icomoon/symbol-defs.svg#icon-chain"></use>
                 </svg>
               </div>
             </div>
@@ -517,7 +516,7 @@
           <div class="mySlides fade slide-desk-tab">
             <div class="testimonial-box ">
               <div class="testimonial-image">
-                <img class="image" src="./resources/testimonial-img3.jpg" alt="james">
+                <img class="image" src="resources/testimonial-img3.jpg" alt="james">
               </div>
               <div>
                 <p class="section-text">
@@ -532,7 +531,7 @@
             </div>
             <div class="testimonial-box">
               <div class="testimonial-image">
-                <img class="image" src="./resources/testimonial-img1.jpg" alt="John">
+                <img class="image" src="resources/testimonial-img1.jpg" alt="John">
               </div>
               <div>
                 <p class="section-text">
@@ -549,7 +548,7 @@
           <div class="mySlides fade slide-desk-tab">
             <div class="testimonial-box">
               <div class="testimonial-image">
-                <img class="image" src="./resources/testimonial-img2.jpg" alt="John">
+                <img class="image" src="resources/testimonial-img2.jpg" alt="John">
               </div>
               <div>
                 <p class="section-text">
@@ -564,7 +563,7 @@
             </div>
             <div class="testimonial-box ">
               <div class="testimonial-image">
-                <img class="image" src="./resources/testimonial-img3.jpg" alt="John">
+                <img class="image" src="resources/testimonial-img3.jpg" alt="John">
               </div>
               <div>
                 <p class="section-text">
@@ -581,7 +580,7 @@
           <div class="mySlides fade slide-desk-tab">
             <div class="testimonial-box">
               <div class="testimonial-image">
-                <img class="image" src="./resources/testimonial-img1.jpg" alt="John">
+                <img class="image" src="resources/testimonial-img1.jpg" alt="John">
               </div>
               <div>
                 <p class="section-text">
@@ -640,49 +639,49 @@
       <div class="glyph fs2">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-facebook-with-circle">
-            <use href="./resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
+            <use href="resources/icomoon/symbol-defs.svg#icon-facebook-with-circle"></use>
           </svg>
         </div>
       </div>
       <div class="glyph fs1">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-twitter-with-circle">
-            <use href="./resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
+            <use href="resources/icomoon/symbol-defs.svg#icon-twitter-with-circle"></use>
           </svg>
         </div>
       </div>
       <div class="glyph fs1">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-dribbble-with-circle">
-            <use href="./resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
+            <use href="resources/icomoon/symbol-defs.svg#icon-dribbble-with-circle"></use>
           </svg>
         </div>
       </div>
       <div class="glyph fs2">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-behance be">
-            <use class="behance-use" href="./resources/icomoon/symbol-defs.svg#icon-behance"></use>
+            <use class="behance-use" href="resources/icomoon/symbol-defs.svg#icon-behance"></use>
           </svg>
         </div>
       </div>
       <div class="glyph fs2">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-github">
-            <use class="icon-use-github" href="./resources/icomoon/symbol-defs.svg#icon-github"></use>
+            <use class="icon-use-github" href="resources/icomoon/symbol-defs.svg#icon-github"></use>
           </svg>
         </div>
       </div>
       <div class="glyph fs2">
         <div class="clearfix pbs iconred">
           <svg class="icon-svg icon icon-google-plus3">
-            <use href="./resources/icomoon/symbol-defs.svg#icon-google-plus3"></use>
+            <use href="resources/icomoon/symbol-defs.svg#icon-google-plus3"></use>
           </svg>
         </div>
       </div>
     </div>
   </footer>
-  <script src="./node_modules/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
-  <script defer src="./resources/icomoon/svgxuse.js"></script>
+  <script src="node_modules/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
+  <script defer src="resources/icomoon/svgxuse.js"></script>
   <script src="index.js"></script>
 </body>
 
