--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
 
 <head>
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <!-- <script src="node_modules/jquery/dist/jquery.min.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FE-Project</title>
@@ -763,7 +764,10 @@
       </div>
     </div>
   </footer>
-  <script src="node_modules/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.js"
+    integrity="sha512-614k4+nIB+21iS2+QUeDh7T928egRNeNcjkKCdWPYmFCA3/mub3H6KoqIHAk8Pdm07S6uAPqWvXerPFVRYVB/Q=="
+    crossorigin="anonymous"></script>
+  <!-- <script src="node_modules/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script> -->
   <script defer src="resources/icomoon/svgxuse.js"></script>
   <script src="index.js"></script>
 </body>
